--- a/Pages/faq.html
+++ b/Pages/faq.html
@@ -53,6 +53,7 @@
     </div>
     <script type="text/javascript" src="../resource/js/banner.js"></script>
     <div id="divFAQ" style="padding-top:10px">
+        <h2>Here are some of the most frequently asked questions that employees have about DXC University.</h2>
     </div>  
     
 </body>
