--- a/Pages/faq.html
+++ b/Pages/faq.html
@@ -53,7 +53,7 @@
     </div>
     <script type="text/javascript" src="../resource/js/banner.js"></script>
     <div id="divFAQ" style="padding-top:10px">
-        <font size="2em"><strong>Here are some of the most frequently asked<br />questions that employees have about DXC<br />University.</strong></font>
+        <p><font size="10em"><strong>Here are some of the most frequently asked<br />questions that employees have about DXC<br />University.</strong></font></p>
     </div>  
     
 </body>
