--- a/Pages/faq.html
+++ b/Pages/faq.html
@@ -13,7 +13,7 @@
     <script>
         //Code Starts
         $(document).ready(function () {
-             var strTable = '<table cellpadding="10" width="100%" border="1">'
+             var strTable = '<table style="border-spacing: 5px; width:100%; border:1px">'
             $.ajax({
                 type: "GET",
                 url: "https://raw.githubusercontent.com/poc-org/help/master/resource/include/QuestionAnswer.xml",
