--- a/Pages/faq.html
+++ b/Pages/faq.html
@@ -24,7 +24,7 @@
                         var strQuestion = $(this).attr('Question');
                         var strAnswer = $(this).attr('Answer');
                         strTable += '<tr><td align="justify"><p padding="5px"><img src="../resource/images/yel_icon.jpg" alt="" style="width:auto; height:20px;" onClick="blabla('+count+')">' + strQuestion + '</p><br />';
-                        strTable += '<div id=' + count + ' style="padding-left:20px;display:none;">' + strAnswer + '</div></td></tr>';
+                        strTable += '<div id=' + count + ' style="padding-left:20px;display:none;">' + strAnswer + '</div></td></tr><br />';
                         $("#" + count + "").hide();
                         count++;
                     });
