--- a/Pages/faq.html
+++ b/Pages/faq.html
@@ -24,7 +24,7 @@
                         var strQuestion = $(this).attr('Question');
                         var strAnswer = $(this).attr('Answer');
                         strTable += '<tr><td align="justify"><p><img src="../resource/images/yel_icon.jpg" alt="" style="width:auto; height:20px;" onClick="blabla('+count+')"><br />' + strQuestion ;
-                        strTable += '<div id=' + count + ' style="padding-left:20px;display:none;">' + strAnswer + '+ '</p><br /></div></td></tr>';
+                        strTable += '<div id=' + count + ' style="padding-left:20px;display:none;">' + strAnswer +  '</p><br /></div></td></tr>';
                         $("#" + count + "").hide();
                         count++;
                     });
