--- a/Pages/faq.html
+++ b/Pages/faq.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../resource/css/tab.css">
 
     <link rel="stylesheet" href="../resource/css/main.css" type="text/css">
-    <script type="text/javascript" src="../resource/js/header.js"></script>    
+ <!--   <script type="text/javascript" src="../resource/js/header.js"></script>   --> 
     <script src='../resource/js/jquery.min.js' type='text/javascript'></script>
     
 
@@ -48,12 +48,14 @@
 
 </head>
 <body>  
+<!--
     <div class="tab" style="bottom:10px" >
         <button class="tablinks"  id="defaultOpen"></button>
     </div>
+-->	
     <script type="text/javascript" src="../resource/js/banner.js"></script>
-    <div id="divFAQ" style="padding-top:10px">
-        <p><font size="4em"><strong>Here are some of the most frequently asked<br />questions that employees have about DXC<br />University.</strong></font></p>
+    <div id="divFAQ" style="padding-top:0px">
+        <p><h2>Here are some of the most frequently asked<br />questions that employees have about DXC<br />University.</strong></font></h2>
     </div>  
     
 </body>
