--- a/Pages/faq.html
+++ b/Pages/faq.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>DXC Saba Online FAQ </title>
     <link rel="stylesheet" href="../resource/css/tab.css">
+    <link rel="shortcut icon" href="../resource/images/DXC.ico" />
 
     <link rel="stylesheet" href="../resource/css/main.css" type="text/css">
 	    <link rel="stylesheet" href="../resource/css/clientlib-all.min.css" type="text/css">
